# obsidian-timestamp-utility

./: .dockerignore  .editorconfig  .gitignore  .gitleaks.toml  .prettierrc.json  AGENTS.md  CHANGELOG.md  COMPACT.md  LICENSE  Makefile  README.md  STATE.md  VERIFICATION.md  VISION.md  changelog.sh  containerd_wrapper.sh  core  dagger-analysis.md  dagger.json  dcp.jsonc  fix_the_slop.md  jest.config.cjs  kilo.json  manifest.json  new-loop-harness-open-spec-engineering-loop.md  opencode.json  package-lock.json  package.json  release.sh  rollup.config.js  run_tests.py  tsconfig.json  versions.json
agents/agentics/: .coverage  .dockerignore  ARCHITECTURE.md  ARCHITECTURE_DEPENDENCY_MANAGEMENT.md  ARCHITECTURE_REFACTOR.md  Dockerfile  LLM_CODE_VALIDATION.md  TEST_SUITE_README.md  TS_ITERATIVE_FIX_PLAN.md  VERIFICATION.md  fix_integration_tests.py  langgraph.json  pyproject.toml  pytest.ini  requirements.in  requirements.txt
agents/agentics/scripts/: test_suite_validation.py
agents/agentics/src/: __init__.py  agent_composer.py  agentics.py  analyze_usage.py  api_validation_tools.py  base_agent.py  circuit_breaker.py  clients.py  code_extractor_agent.py  code_generator_agent.py  code_integrator_agent.py  code_reviewer_agent.py  code_validator.py  collaborative_generator.py  collect_tests.py  combined_agents.py  composable_workflows.py  config.py  dependency_analyzer_agent.py  dependency_installer_agent.py  error_recovery_agent.py  eval_rubric.py  exceptions.py  feedback_agent.py  fetch_issue_agent.py  hitl_node.py  implementation_planner_agent.py  import_utils.py  main.ts  (+30 more)
(+585 files in other folders)
