[project]
name = "agentics"
version = "0.1.0"
description = "Multi-agent LangGraph workflows for automated code generation, testing, and integration from GitHub issues using Spec-Kit architecture."
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-ollama>=0.3.0",
    "langsmith>=0.6.0",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.0.0",
    "pygithub>=2.8.0",
    "httpx>=0.27.0",
    "tenacity>=8.0.0",
    "mcp>=1.26.0",
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.0",
    "ruff>=0.4.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
